edit to food menu

--- a/src/speisen/index.pug
+++ b/src/speisen/index.pug
@@ -162,7 +162,7 @@ html(lang="de-DE")
             br.mobile-lr
             span.menu-item-desc_inline_normal-font auf Meerrettichsoße mit 
               br.mobile-lr
-              |Wirsinggemüse und Petersilienkartoffeln
+              |Kartoffelpüree
             div.menu-item-price-list
               span.price 16,20 €
           li
