--- a/src/index.pug
+++ b/src/index.pug
@@ -18,9 +18,9 @@ html(lang="de-DE")
             span.menu-item-desc Nach unseren Vorstellungen gekeltert
             div.menu-item-price-list
               span.quantity 0,25l 
-              span.price 1,90 €
+              span.price 2,00 €
               span.quantity 0,5l 
-              span.price 3,20 €
+              span.price 3,30 €
 
           li.extra-margin-bottom 
             span.menu-item-name E sauber 
@@ -29,9 +29,9 @@ html(lang="de-DE")
             span.menu-item-brand Kelterei Matsch und Brei
             div.menu-item-price-list
               span.quantity 0,25l 
-              span.price 1,90 €
+              span.price 2,00 €
               span.quantity 0,5l 
-              span.price 3,20 €
+              span.price 3,30 €
 
           li.extra-margin-bottom 
             span.menu-item-name Apfelwein 
@@ -40,30 +40,30 @@ html(lang="de-DE")
               sup 6
             div.menu-item-price-list
               span.quantity 0,25l 
-              span.price 1,90 €
+              span.price 2,00 €
               span.quantity 0,5l 
-              span.price 3,20 €
+              span.price 3,30 €
 
           li.extra-margin-bottom 
             span.menu-item-name Birnenwein 
               sup 6
             div.menu-item-price-list
               span.quantity 0,25l 
-              span.price 1,90 €
+              span.price 2,00 €
               span.quantity 0,5l 
-              span.price 3,20 €
+              span.price 3,30 €
 
           li.extra-margin-bottom 
             span.menu-item-name Bembel
             div.menu-item-price-list
               span.quantity 1l 
-              span.price 6,40 €
+              span.price 6,60 €
               span.quantity 1,5l 
-              span.price 9,50 €
+              span.price 9,70 €
               span.quantity 2l 
-              span.price 12,50 €
+              span.price 12,80 €
               span.quantity 3l 
-              span.price 18,90 €
+              span.price 19,20 €
 
           li.extra-margin-bottom 
             span.menu-item-name FLASCHE 0,75
@@ -371,21 +371,30 @@ html(lang="de-DE")
             h3.menu-category Sekt 
               sup 6
             div.menu-item-price-list
-              span.quantity 0,2l 
-              span.price 3,50 €
-              span.quantity 0,75l 
-              span.price 18,00 €
+              span.quantity 0,2l Flasche
+              span.price &nbsp;
+              span.quantity &nbsp; 
+              span.price 7,20 €
 
           li
             span.menu-item-name Premiumapfelsekt 
               br.mobile-lr
               span.menu-item-name_small trocken  
-              sup 6
             span.menu-item-brand aus Ontario Äpfeln, 
               span.menu-item-desc_inline Kelterei Schneider
             div.menu-item-price-list
               span.quantity 0,75l 
-              span.price 24,00 €
+              span.price 18,20 €
+
+          li
+            span.menu-item-name Premiumapfelsekt 
+              br.mobile-lr
+              span.menu-item-name_small rosé  
+              br 
+              span.menu-item-desc_inline Kelterei Schneider
+            div.menu-item-price-list
+              span.quantity 0,75l 
+              span.price 18,20 €
 
         h3.menu-category Vermischtes
         ul 
