--- a/src/speisen/index.pug
+++ b/src/speisen/index.pug
@@ -21,7 +21,13 @@ html(lang="de-DE")
             br.mobile-lr
             span.menu-item-desc_inline_normal-font mit Musik, Brot und Butter
             div.menu-item-price-list
-              span.price 4,60 €
+              span.price 4,90 €
+          li
+            span.menu-item-name_inline Große Portion Handkäs 
+            br.mobile-lr
+            span.menu-item-desc_inline_normal-font mit Musik, Brot und Butter
+            div.menu-item-price-list
+              span.price 6,90 €
           li
             span.menu-item-name_inline Handkäs „Schoppen Hof“ 
             br.mobile-lr 
@@ -29,19 +35,21 @@ html(lang="de-DE")
               br.mobile-lr
               |Radieschen und Kresse
             div.menu-item-price-list
-              span.price 5,20 €
+              span.price 5,60 €
+          li
+            span.menu-item-name_inline Große Handkäs „Schoppen Hof“ 
+            br.mobile-lr 
+            span.menu-item-desc_inline_normal-font mit Musik, roten Zwiebeln, 
+              br.mobile-lr
+              |Radieschen und Kresse
+            div.menu-item-price-list
+              span.price 7,40 €
           li
             span.menu-item-name_inline Kürbis-Apfelwein-Suppe 
             br.mobile-lr
             span.menu-item-desc_inline_normal-font mit Ingwer verfeinert, dazu Brot
             div.menu-item-price-list
               span.price 4,90 €
-          li
-            span.menu-item-name_inline Hausgemachter Wurstsalat 
-            br.mobile-lr
-            span.menu-item-desc_inline_normal-font in einer Vinaigrette mit Brot und Butter
-            div.menu-item-price-list
-              span.price 6,80 €
           li
             span.menu-item-name_inline Großer bunter Salatteller
             div.menu-item-price-list
@@ -55,11 +63,11 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Grüne Soße 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Petersilienkartoffeln und 
+            span.menu-item-desc_inline_normal-font mit Petersilienkarto eln oder 
               br.mobile-lr
-              |gekochten Bioeiern
+              |Bratkarto eln und gekochten Bioeiern
             div.menu-item-price-list
-              span.price 7,90 €
+              span.price 8,20 €
           li
             span.menu-item-name_inline Grobe Bratwurst 
             br.mobile-lr 
@@ -69,7 +77,7 @@ html(lang="de-DE")
               br.mobile-lr
               |und Sauerkraut 
             div.menu-item-price-list
-              span.price 9,20 €
+              span.price 8,90 €
           li
             span.menu-item-name_inline Matjes hausgemacht 
             br.mobile-lr 
@@ -91,14 +99,11 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Großer Salatteller 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit gebratenen Maultaschen und Röstzwiebeln
-            br 
-            div.price-align-bottom
-              span.menu-item-desc_inline_normal-font (auch mit vegetarischen 
-                br.mobile-lr
-                |Maultaschen erhältlich)
-              div.menu-item-price-list
-                span.price 9,20 €
+            span.menu-item-desc_inline_normal-font mit Ziegenkäseröllchen, Preiselbeeren 
+              br.mobile-lr
+              |und Walnüssen 
+            div.menu-item-price-list
+              span.price 9,20 €
           li
             span.menu-item-name_inline Schoppen Hofs Salatteller 
             br.mobile-lr
@@ -128,7 +133,7 @@ html(lang="de-DE")
               br.mobile-lr
               |und Sauerkraut 
             div.menu-item-price-list
-              span.price 12,40 €
+              span.price 11,90 €
           li
             span.menu-item-name_inline Schnitzel Wiener Art 
             br.mobile-lr
@@ -156,7 +161,15 @@ html(lang="de-DE")
               br.mobile-lr
               |und Sauerkraut
             div.menu-item-price-list
-              span.price 13,20 €
+              span.price 12,40 €
+          li
+            span.menu-item-name_inline Wisperforelle geräuchert als Filets 
+            br.mobile-lr
+            span.menu-item-desc_inline_normal-font mit Sahnemeerre ich, Bratkarto eln 
+              br.mobile-lr
+              |und Salat
+            div.menu-item-price-list
+              span.price 14,80 €
           li
             span.menu-item-name_inline Im Gemüsesud gesottener Tafelspitz 
             br.mobile-lr
@@ -164,7 +177,7 @@ html(lang="de-DE")
               br.mobile-lr
               |Kartoffelpüree
             div.menu-item-price-list
-              span.price 16,20 €
+              span.price 14,90 €
           li
             span.menu-item-name_inline Rumpsteak 
             br.mobile-lr
