Add and edit Spring menu

--- a/src/speisen/index.pug
+++ b/src/speisen/index.pug
@@ -15,7 +15,7 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Brezel mit Spundekäs 
             div.menu-item-price-list
-              span.price 3,40 €
+              span.price 3,60 €
           li
             span.menu-item-name_inline Handkäs 
             br.mobile-lr
@@ -23,7 +23,7 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 4,90 €
           li
-            span.menu-item-name_inline Große Portion Handkäs 
+            span.menu-item-name_inline Große Portion Handkäs 
             br.mobile-lr
             span.menu-item-desc_inline_normal-font mit Musik, Brot und Butter
             div.menu-item-price-list
@@ -45,19 +45,19 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 7,40 €
           li
-            span.menu-item-name_inline Kürbis-Apfelwein-Suppe 
+            span.menu-item-name_inline Hausgemachter Wurstsalat 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Ingwer verfeinert, dazu Brot
+            span.menu-item-desc_inline_normal-font in einer Vinaigrette mit Brot und Butter
             div.menu-item-price-list
-              span.price 4,90 €
+              span.price 6,80 €
           li
             span.menu-item-name_inline Großer bunter Salatteller
             div.menu-item-price-list
-              span.price 6,40 €
+              span.price 6,80 €
           li
             span.menu-item-name_inline Kleiner bunter Salatteller
             div.menu-item-price-list
-              span.price 3,40 €
+              span.price 3,60 €
         h3.menu-category.menu-category_extra-margin HauptSpeisen
         ul 
           li
@@ -73,9 +73,7 @@ html(lang="de-DE")
             br.mobile-lr 
             span.menu-item-desc_inline_normal-font mit Bratensoße, 
               br.mobile-lr
-              |hausgemachtem Kartoffelpüree 
-              br.mobile-lr
-              |und Sauerkraut 
+              |dazu Bratkartoffeln und Salatbeilage 
             div.menu-item-price-list
               span.price 8,90 €
           li
@@ -133,9 +131,7 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Saftig gekochtes Rippchen 
             br.mobile-lr 
-            span.menu-item-desc_inline_normal-font mit hausgemachtem Kartoffelpüree, 
-              br.mobile-lr
-              |und Sauerkraut 
+            span.menu-item-desc_inline_normal-font mit Bratkartoffeln und Salat
             div.menu-item-price-list
               span.price 11,90 €
           li
@@ -151,37 +147,35 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 12,90 €
           li
-            span.menu-item-name_inline Rahmschnitzel 
-            br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Preiselbeeren, Pommes Frites 
+            span.menu-item-name_inline Handkässchnitzel 
               br.mobile-lr
-              |und Salat
-            div.menu-item-price-list
-              span.price 13,40 €
-          li
-            span.menu-item-name_inline Kassler vom Schweinerücken 
+              |„Schoppen Hof Style“ 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Bratensoße, Kartoffelpüree 
+            span.menu-item-desc_inline_normal-font mit Zwiebel-Apfel-Sud, 
               br.mobile-lr
-              |und Sauerkraut
+              |dazu Bratkartoffeln und Salatbeilage
             div.menu-item-price-list
-              span.price 12,40 €
+              span.price 13,60 €
           li
-            span.menu-item-name_inline Wisperforelle geräuchert als Filets 
+            span.menu-item-name_inline Kalbsschnitzel paniert 
+            br.mobile-lr
+            span.menu-item-desc_inline_normal-font mit Bratkartoffeln und kleinem Salat 
+            div.menu-item-price-list
+              span.price 16,90 €
+          li
+            span.menu-item-name_inline Kalbsschnitzel paniert 
+            br.mobile-lr
+            span.menu-item-desc_inline_normal-font mit Grüner Soße und Bratkartoffeln 
+            div.menu-item-price-list
+              span.price 16,90 €
+          li
+            span.menu-item-name_inline Wisperforelle geräuchert als Filets 
             br.mobile-lr
             span.menu-item-desc_inline_normal-font mit Sahnemeerre ich, Bratkartoffeln 
               br.mobile-lr
               |und Salat
             div.menu-item-price-list
-              span.price 14,80 €
-          li
-            span.menu-item-name_inline Im Gemüsesud gesottener Tafelspitz 
-            br.mobile-lr
-            span.menu-item-desc_inline_normal-font auf Meerrettichsoße mit 
-              br.mobile-lr
-              |Kartoffelpüree
-            div.menu-item-price-list
-              span.price 14,90 €
+              span.price 14,20 €
           li
             span.menu-item-name_inline Rumpsteak 
             br.mobile-lr
@@ -195,25 +189,21 @@ html(lang="de-DE")
         h3.menu-category.menu-category_extra-margin NachSpeisen
         ul 
           li
-            span.menu-item-name_inline Vanilleeis mit Schokosoße und Sahne 
+            span.menu-item-name_inline Vanilleeis mit frischen Erdbeeren 
+            br.mobile-lr
+            |und Sahne 
             div.menu-item-price-list
-              span.price 3,80 €
+              span.price 4,90 €
           li
             span.menu-item-name_inline Hessisches Apfeltiramisu im Glas 
             div.menu-item-price-list
-              span.price 4,10 €
+              span.price 4,20 €
           li
-            span.menu-item-name_inline Kaiserschmarrn mit Roter Grütze 
+            span.menu-item-name_inline Apfelküchelchen mit Vanilleeis 
               br.mobile-lr
-              |und Vanilleeis 
+              |und Sahne 
             div.menu-item-price-list
-              span.price 4,60 €
-          li
-            span.menu-item-name_inline Kaiserschmarrn groß mit Roter Grütze
-              br.mobile-lr
-              |und Vanilleeis 
-            div.menu-item-price-list
-              span.price 8,60 €
+              span.price 4,80 €
         h3.menu-category.menu-category_extra-margin Für Kleine Gäste
         ul 
           li
@@ -225,12 +215,8 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 6,50 €
           li
-            span.menu-item-name_inline Bratkartoffeln mit Salat
-            div.menu-item-price-list
-              span.price 4,50 €
-          li
             span.menu-item-name_inline Nürnberger Bratwürstchen 
               br.mobile-lr
-              |mit Pommes Frites oder Kartoffelpüree
+              |mit Pommes Frites oder Kartoffelpüree
             div.menu-item-price-list
               span.price 4,80 €
