--- a/src/index.pug
+++ b/src/index.pug
@@ -516,3 +516,5 @@ html(lang="de-DE")
         li 4) KOFFEINHALTIG
         li 5) CHININHALTIG
         li 6) ENTHÄLT SULFITE
+      
+    include includes/_footer.pug
