--- a/src/kontakt/index.pug
+++ b/src/kontakt/index.pug
@@ -77,3 +77,4 @@ html
           |Zuständige Aufsichtsbehörde
           br 
           |Gewerbeamt Stadt Wiesbaden
+    include ../includes/_footer.pug
