--- a/src/speisen/index.pug
+++ b/src/speisen/index.pug
@@ -220,3 +220,4 @@ html(lang="de-DE")
               |mit Pommes Frites oder Kartoffelpüree
             div.menu-item-price-list
               span.price 4,80 €
+    include ../includes/_footer.pug
