Edits to dinner menu

--- a/src/speisen/index.pug
+++ b/src/speisen/index.pug
@@ -15,7 +15,7 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Brezel mit Spundekäs 
             div.menu-item-price-list
-              span.price 3,60 €
+              span.price 3,40 €
           li
             span.menu-item-name_inline Handkäs 
             br.mobile-lr
@@ -37,7 +37,7 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 5,60 €
           li
-            span.menu-item-name_inline Große Handkäs „Schoppen Hof“ 
+            span.menu-item-name_inline Große Portion Handkäs „Schoppen Hof“ 
             br.mobile-lr 
             span.menu-item-desc_inline_normal-font mit Musik, roten Zwiebeln, 
               br.mobile-lr
@@ -45,19 +45,19 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 7,40 €
           li
-            span.menu-item-name_inline Hausgemachter Wurstsalat 
+            span.menu-item-name_inline Kürbis-Apfelwein-Suppe, 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font in einer Vinaigrette mit Brot und Butter
+            span.menu-item-desc_inline_normal-font mit Ingwer verfeinert, dazu Brot
             div.menu-item-price-list
-              span.price 6,80 €
+              span.price 4,90 €
           li
             span.menu-item-name_inline Großer bunter Salatteller
             div.menu-item-price-list
-              span.price 6,80 €
+              span.price 6,40 €
           li
             span.menu-item-name_inline Kleiner bunter Salatteller
             div.menu-item-price-list
-              span.price 3,60 €
+              span.price 3,40 €
         h3.menu-category.menu-category_extra-margin HauptSpeisen
         ul 
           li
@@ -147,35 +147,39 @@ html(lang="de-DE")
             div.menu-item-price-list
               span.price 12,90 €
           li
-            span.menu-item-name_inline Handkässchnitzel 
-              br.mobile-lr
-              |„Schoppen Hof Style“ 
+            span.menu-item-name_inline Rahmschnitzel Wiener Art 
             br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Zwiebel-Apfel-Sud, 
-              br.mobile-lr
-              |dazu Bratkartoffeln und Salatbeilage
+            span.menu-item-desc_inline_normal-font mit Preiselbeeren, Pommes Frites und Salat 
             div.menu-item-price-list
-              span.price 13,60 €
+              span.price 13,40 €
+          li
+            span.menu-item-name_inline Wisperforelle geräuchert als Filets 
+            br.mobile-lr
+            span.menu-item-desc_inline_normal-font mit Sahnemeerrettich, Bratkartoffeln 
+              br.mobile-lr
+              |und Salat
+            div.menu-item-price-list
+              span.price 14,80 €
+          li
+            span.menu-item-name_inline Im Gemüsesud gesottener Tafelspitz 
+            br.mobile-lr
+            span.menu-item-desc_inline_normal-font auf Meerrettichsoße mit Wirsinggemüse 
+              br.mobile-lr
+              |und Petersilienkartoffeln 
+            div.menu-item-price-list
+              span.price 14,90 €
           li
             span.menu-item-name_inline Kalbsschnitzel paniert 
             br.mobile-lr
             span.menu-item-desc_inline_normal-font mit Bratkartoffeln und kleinem Salat 
             div.menu-item-price-list
-              span.price 16,90 €
+              span.price 17,40 €
           li
             span.menu-item-name_inline Kalbsschnitzel paniert 
             br.mobile-lr
             span.menu-item-desc_inline_normal-font mit Grüner Soße und Bratkartoffeln 
             div.menu-item-price-list
-              span.price 16,90 €
-          li
-            span.menu-item-name_inline Wisperforelle geräuchert als Filets 
-            br.mobile-lr
-            span.menu-item-desc_inline_normal-font mit Sahnemeerre ich, Bratkartoffeln 
-              br.mobile-lr
-              |und Salat
-            div.menu-item-price-list
-              span.price 14,20 €
+              span.price 17,40 €
           li
             span.menu-item-name_inline Rumpsteak 
             br.mobile-lr
@@ -189,21 +193,25 @@ html(lang="de-DE")
         h3.menu-category.menu-category_extra-margin NachSpeisen
         ul 
           li
-            span.menu-item-name_inline Vanilleeis mit frischen Erdbeeren 
-            br.mobile-lr
-            |und Sahne 
+            span.menu-item-name_inline Vanilleeis mit Schokosoße und Sahne 
             div.menu-item-price-list
-              span.price 4,90 €
+              span.price 3,80 €
           li
             span.menu-item-name_inline Hessisches Apfeltiramisu im Glas 
             div.menu-item-price-list
-              span.price 4,20 €
+              span.price 4,10 €
           li
-            span.menu-item-name_inline Apfelküchelchen mit Vanilleeis 
+            span.menu-item-name_inline Kaiserschmarrn mit Roter Grütze 
               br.mobile-lr
-              |und Sahne 
+              |und Vanilleeis 
             div.menu-item-price-list
-              span.price 4,80 €
+              span.price 4,60 €
+          li
+            span.menu-item-name_inline Kaiserschmarrn groß mit Roter Grütze 
+              br.mobile-lr
+              |und Vanilleeis 
+            div.menu-item-price-list
+              span.price 8,60 €
         h3.menu-category.menu-category_extra-margin Für Kleine Gäste
         ul 
           li
