--- a/src/speisen/index.pug
+++ b/src/speisen/index.pug
@@ -73,7 +73,7 @@ html(lang="de-DE")
             br.mobile-lr 
             span.menu-item-desc_inline_normal-font mit Bratensoße, 
               br.mobile-lr
-              |dazu Bratkartoffeln und Salatbeilage 
+              |hausgemachtem Kartoffelpüree und Sauerkraut 
             div.menu-item-price-list
               span.price 8,90 €
           li
@@ -131,7 +131,9 @@ html(lang="de-DE")
           li
             span.menu-item-name_inline Saftig gekochtes Rippchen 
             br.mobile-lr 
-            span.menu-item-desc_inline_normal-font mit Bratkartoffeln und Salat
+            span.menu-item-desc_inline_normal-font auf Sauerkraut 
+              br.mobile-lr
+              |und hausgemachtem Kartoffelpüree
             div.menu-item-price-list
               span.price 11,90 €
           li
