--- a/src/impressum/index.pug
+++ b/src/impressum/index.pug
@@ -52,7 +52,7 @@ html
             br
             |Die Verarbeitung erfolgt gemäß Art. 6 Abs. 1 lit. f DSGVO auf Basis unseres berechtigten Interesses an der Verbesserung der Stabilität und Funktionalität unserer Website. Eine Weitergabe oder anderweitige Verwendung der Daten findet nicht statt. Wir behalten uns allerdings vor, die Server-Logfiles nachträglich zu überprüfen, sollten konkrete Anhaltspunkte auf eine rechtswidrige Nutzung hinweisen.
           h4 Zugriffsdaten
-          p Wir, Stefan Kaden - Apfelweingaststätte Atschel, erheben und speichern grundsätzlich keinerlei personenbezogene Daten, allerdings werden aufgrund unseres berechtigten Interesses (s. Art. 6 Abs. 1 lit. f. DSGVO) Daten über Zugriffe auf die Website durch unseren Internetprovider erhoben und als „Server-Logfiles“ auf dem Server der Website gespeichert. Folgende Daten werden so protokolliert:
+          p Wir, Martin Hönes- Apfelweingaststätte Schoppenhof, erheben und speichern grundsätzlich keinerlei personenbezogene Daten, allerdings werden aufgrund unseres berechtigten Interesses (s. Art. 6 Abs. 1 lit. f. DSGVO) Daten über Zugriffe auf die Website durch unseren Internetprovider erhoben und als „Server-Logfiles“ auf dem Server der Website gespeichert. Folgende Daten werden so protokolliert:
           p
             ul
               li Besuchte Website 
